--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Google Apps Script
 
 on:
   push:
-    branches: [main]
+    branches: [master]
     paths:
       - 'apps_script/**'
 
