--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Google Apps Script
+name: Deploy Google Apps Scripts
 
 on:
   push:
@@ -11,16 +11,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '14'
+        
     - run: npm install -g @google/clasp
+    
     - name: Create clasprc.json file
       run: |
         echo '${{ secrets.CLASPRC_JSON }}' > ~/.clasprc.json
-    - name: Create .clasp.json file
+
+    # Deploy ProcessVideos.js
+    - name: Create .clasp.json for ProcessVideos
       run: |
-        echo '${{ secrets.CLASP_JSON }}' > .clasp.json
-    - name: Deploy with clasp
-      run: clasp push -f
+        echo '${{ secrets.CLASP_JSON_PROCESS_VIDEOS }}' > apps_script/.clasp.json
+    - name: Deploy ProcessVideos with clasp
+      working-directory: apps_script
+      run: clasp push -f ProcessVideos.js
+
+    # Deploy Code_v2.js
+    - name: Create .clasp.json for Code_v2
+      run: |
+        echo '${{ secrets.CLASP_JSON }}' > apps_script/.clasp.json
+    - name: Deploy Code_v2 with clasp
+      working-directory: apps_script
+      run: clasp push -f Code_v2.js
