Refactor Google Apps Script deployment and update video fetching logic
- Renamed the deployment command in the GitHub Actions workflow from `Code_v2.js` to `Code.js`.
- Deleted the obsolete `Code_v2.js` file and consolidated its functionality into `Code.js`.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
         echo '${{ secrets.CLASP_JSON }}' > apps_script/.clasp.json
     - name: Deploy Code_v2 with clasp
       working-directory: apps_script
-      run: clasp push -f Code_v2.js
+      run: clasp push -f Code.js
