Update deploy workflow to force push changes in Google Apps Script deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         echo '${{ secrets.CLASP_JSON }}' > .clasp.json
     - name: Deploy scripts
       working-directory: apps_script
-      run: clasp push 
+      run: clasp push --force
