--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: [master]
     paths:
       - 'apps_script/**'
+      - '.github/workflows/deploy.yml'
 
 jobs:
   deploy:
@@ -23,11 +24,11 @@ jobs:
       run: |
         echo '${{ secrets.CLASPRC_JSON }}' > ~/.clasprc.json
 
-
     - name: Create .clasp.json 
       working-directory: apps_script
       run: |
         echo '${{ secrets.CLASP_JSON }}' > .clasp.json
+        
     - name: Deploy scripts
       working-directory: apps_script
       run: clasp push --force
