--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
       - '*.md'
       - '.gitignore'
       - 'apps_script/**'
+      - '.github/workflows/deploy.yml'
 
   pull_request:
     branches: [ master ]
